Fix up z-indexes

--- a/framework/core/ember/app/styles/flarum/alerts.less
+++ b/framework/core/ember/app/styles/flarum/alerts.less
@@ -2,6 +2,7 @@
 	position: fixed;
 	bottom: 20px;
 	left: 20px;
+	z-index: @zindex-alerts;
 
 	& .alert {
 		display: inline-block;
